[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/fontawesome-free-5.15.4-desktop/otfs/Font Awesome 5 Free-Regular-400.otf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Main/EditLabel.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 1 )

[node name="EditLabel" type="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 990.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 7
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 994.0
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 1 )
text = "ÔÅÑ"
flat = true

[connection signal="text_changed" from="HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
